@@ -7,6 +7,7 @@ pipeline {
         IMAGE_REPO_NAME="image_repo"
         IMAGE_TAG= "${env.BUILD_ID}"
         REPOSITORY_URI = "775012328020.dkr.ecr.us-east-1.amazonaws.com/image_repo"
+        MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"
     }
     stages {
         
